<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phototonics</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_name">White Cube</string>
    <string name="app_name_pro">White</string>
    <string name="app_name_track">Cube</string>
    <string name="take_photo_camera">Take photo</string>
    <string name="choose_from_gallery">Choose image</string>
    <string name="img_desc">Images</string>
    <string name="or">or</string>
    <string name="error_img_not_found">Oops! please try again.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="error_apply_effect">Oops! please try again.</string>
    <string name="please_wait">Please wait</string>
    <string name="exit_prompt">Are you sure that you want to close editor?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_media">Error: your SD-Card is not available.</string>
    <string name="saved">Please find your image at:\n:url:"</string>
    <string name="save_failed">Oops! please try again.</string>
    <string name="redL">Red</string>
    <string name="greenL">Green</string>
    <string name="blueL">Blue</string>
    <string name="hue">Hue: :value:\u00B0</string>
    <string name="sat">Saturation: :value:%</string>
    <string name="brightness">Brightness: :value:%</string>
    <string name="contrast">Contrast: :value:</string>
    <string name="rotate">Angle: :value:\u00B0</string>
    <string name="flip_v">Horizon.</string>
    <string name="flip_h">Vertical</string>
    <string name="red">Red: :value:</string>
    <string name="green">Green: :value:</string>
    <string name="blue">Blue: :value:</string>
    <string name="redP">Red: :value:%</string>
    <string name="greenP">Green: :value:%</string>
    <string name="blueP">Blue: :value:%</string>
    <string name="cdepth">Color Depth: :value:</string>
    <string name="effect1">Brightness</string>
    <string name="effect2">Flip</string>
    <string name="effect3">Hue</string>
    <string name="effect4">Tint</string>
    <string name="effect5">Gamma</string>
    <string name="effect6">Invert</string>
    <string name="effect7">Grayscale</string>
    <string name="effect8">Sepia</string>
    <string name="effect9">Sharpen</string>
    <string name="effect10">Gau. Blur</string>
    <string name="effect11">C. Filter</string>
    <string name="effect12">C. Depth</string>
    <string name="effect13">Emboss</string>
    <string name="effect14">Boost</string>
    <string name="effect15">Noise</string>
    <string name="effect16">Sketch</string>
    <string name="effect17">Vignette</string>
    <string name="effect18">Saturation</string>
    <string name="effect19">Contrast</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string-array name="drawer_list_array">
        <item>Home</item>
        <item>Capture</item>
        <item>Edit</item>
        <item>Watermark</item>
        <item>History</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

</resources>