<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holder_boost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="#BB000000"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="gone" >

    <TextView
        android:id="@+id/boost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/redP"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/boost_value"
        style="@style/SeekBarAppThemeColorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"
        android:mirrorForRtl="false"
        android:progress="100"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/boost_red"
            style="@style/ButtonAppThemeColorize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBoostType"
            android:tag="1"
            android:text="@string/redL"
            android:textSize="18sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/boost_green"
            style="@style/ButtonAppThemeColorize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBoostType"
            android:tag="2"
            android:text="@string/greenL"
            android:textSize="18sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/boost_blue"
            style="@style/ButtonAppThemeColorize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBoostType"
            android:tag="3"
            android:text="@string/blueL"
            android:textSize="18sp"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>