<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holder_flip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="#BB000000"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="gone" >

    <TextView
        android:id="@+id/rotate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rotate"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/rotate_value"
        style="@style/SeekBarAppThemeColorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="360"
        android:mirrorForRtl="false"
        android:progress="0"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/flip_v"
            style="@style/ButtonAppThemeColorize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onFlipV"
            android:text="@string/flip_v"
            android:textSize="18sp" />

        <Button
            android:id="@+id/flip_h"
            style="@style/ButtonAppThemeColorize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onFlipH"
            android:text="@string/flip_h"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>