<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holder_cbalance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="#BB000000"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="gone" >

    <TextView
        android:id="@+id/bRed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/redP"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/bRed_value"
        style="@style/SeekBarAppThemeColorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"
        android:mirrorForRtl="false"
        android:progress="100"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/bGreen_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/greenP"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/bGreen_value"
        style="@style/SeekBarAppThemeGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"
        android:mirrorForRtl="false"
        android:progress="100"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/bBlue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/blueP"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/bBlue_value"
        style="@style/SeekBarAppThemeBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"
        android:mirrorForRtl="false"
        android:progress="100"
        tools:ignore="UnusedAttribute" />

</LinearLayout>